# ArielSensorArray

./: .dockerignore  .dvcignore  .editorconfig  .editorconfig.test.yml  .env.example  .env.schema.json  .gitattributes  .gitignore  .mermaidrc-dark.json  .mermaidrc.json  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  .svgo.json  .zenodo.json  ARCHITECTURE.md  CITATION.cff  CITATION.ris  CONDA_ENV.yaml  CONDA_ENV.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  LICENSE  Makefile  PROJECT_ANALYSIS.md  README.md  SECURITY.md  best_version.md  docker-compose.yaml  docker-compose.yml  dvc.yaml  index.html  makefile  makefile.ci  makefile.local  package.json  params.yaml  pyproject.toml  requirements-dev.txt  (+6 more)
.dvc/: .dvcignore  .gitattributes  .gitgnore  ARCHITECTURE.md  README.md  config  config.local  dvc.yaml  params.yaml  plots.yaml
.dvc/plots/: autocorr.json  calibration.json  dashboard.json  fft.json  loss.json  metrics.json
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_REVIEW_GUIDE.md  PULL_REQUEST_TEMPLATE.md  README.md  REVIEW_CHECKLIST.md  SECURITY.md  SECURITY_ADVISORY_TEMPLATE.md  architecture.md  dependabot.yaml  labeler.yml  pr-review-checklist.yml  security@spectramind.dev
.github/ISSUE_TEMPLATE/: ARCHITECTURE.md  README.md  bug_report.md  bug_report.yml  ci_failure.md  config.yml  config_request.md  config_update.yml  diagnostics.md  documentation.md  documentation.yml  documentation_request.yml  experiment.md  feature_request.md  feature_request.yml  performance_issue.yml  security_report.yml  task.md  task_tracking.yml
.github/workflows/: AI_Design_and_Modeling.html  AI_Design_and_Modeling.md  ARCHITECTURE.md  FUNDING.yml  README.md  ablation.yaml  ablation.yml  artifact-sweeper.yml  bandit.yml  benchmark.yaml  benchmark.yml  branch-protection.yml  calibration-ci.yml  calibration.json  ci-dashboard.yml  ci.yaml  ci.yml  codeql.yml  dependabot-auto-merge.yml  diag-export.yml  diagnostics.yaml  diagnostics.yml  diagrams.yml  docker-trivy.yml  docs.yaml  docs.yml  hadolint.yml  hash-check.yml  kaggle-submit.yml  labeler.yml  lint.yaml  lint.yml  mermaid-export.yml  nightly-e2e.yml  pages.yml  pip-audit.yml  pr-title-lint.yml  release.yaml  release.yml  sbom-refresh.yml  (+7 more)
assets/: <!DOCTYPE html>  AI_Design_and_Modeling.md  ARCHITECTURE.md  COMPARISON_GUIDE.md  COMPARISON_MATRIX.csv  CONTRIBUTING.md  KAGGLE_GUIDE.md  README.md  architecture_stack.mmd  assets-manifest.json  diagnostics_dashboard.html  kaggle_infer_template.ipynb  report.html
assets/diagrams/: .mermaidrc.dark.json  .mermaidrc.json  README.md  README.ms  architecture_stack.mmd  pipeline_overview.mmd  symbolic_logic_layers.mmd  test_diagrams.py
configs/: ARCHITECTURE  README.md  ablate.yaml  ablation_light.yaml  config.yaml  predict.yaml  selftest.yaml  toy.yaml  train.yaml  val.yaml
diagrams/: ARCHITECTURE.md  README.md  calibration_architecture.mmd  calibration_chain.md  ci_pipeline.md  cli-flow.md  cli-flow.mmd  main.md  main.mmd  pipeline.mmd  pipeline_overview.md  symbolic_engine.md  train_ablation.md
docs/: ARCHITECTURE.md  CITATION.bib  CI_DASHBOARD.md  CONTRIBUTING.md  I_DASHBOARD.md  Kaggle_Model_Comparison.md  README.md  best_version.md  cite-examples.md  comparison.md  index.md  mermaid.md  pipeline_diagram.mmd
logs/: calibration.json
notebooks/: .gitkeep  00_quickstart.ipynb  01_data_exploration.ipynb  01_pipeline_calibrate_train_predict.ipynb  02_calibration_walkthrough.ipynb  02_diagnostics_explainability.ipynb  03_ablation_and_tuning.ipynb  03_train_v50_demo.ipynb  04_leaderboard_and_submission.ipynb  04_leaderboard_and_submission_fixed.ipynb  04_predict_v50_demo.ipynb  05_diagnostics_suite.ipynb  05_uncertainty_calibration_and_cycle_consistency.ipynb  06_physics_informed_modeling_and_symbolic_constraints.ipynb  06_symbolic_overlays.ipynb  07_huggingface_integration_and_transfer_learning.ipynb  07_shap_explainability.ipynb  08_ensembles_mc_dropout_and_corel_conformal.ipynb  08_fft_autocorr_analysis.ipynb  09_ablation_study.ipynb  09_experiment_tracking_dvc_ci.ipynb  10_full_pipeline_reproducibility_and_ci.ipynb  10_kaggle_submission_pipeline.ipynb  11_corel_calibration_demo.ipynb  11_kaggle_submission_and_leaderboard_playbook.ipynb  12_benchmark_models_comparison.ipynb  12_post_submission_analysis_and_leaderboard_tracking.ipynb  13_gui_dashboard_demo.ipynb  14_radiation_and_noise_modeling.ipynb  15_gravitational_lensing_demo.ipynb  ARCHITECTURE.md  README.md  SpectraMind_V50_Master_Walkthrough_v3.ipynb  bootstrap_notebooks.sh
sbom/: INDEX.json  seed.json
scripts/: __init__.py  bump_version.sh  calibration.py  cli.py  diagnostics.py  export_mermaid.py  generate_placeholder_plots.py  io_utils.py  logging_utils.py  paths.py  render_one.js  submit.py  validate_env.py  validate_submission.py
src/: ARCHITECTURE.md  App.tsx  README.md  __init__.py  predict_v50.py  train_v50.py
src/asa/: cli.py  (+2 more)
tests/: ARCHITECTURE.md  README.md  conftest.py  pytest.ini  test_cli_map_integrity.py  test_logging.py  test_pipeline_consistency_checker.py  test_selftest.py  test_symbolic_logic_engine.py
tools/: ARCHITECTURE.md  README.md  analyze_fft_autocorr_mu.py  auto_ablate_v50.py  check_calibration.py  explain_shap_metadata_v50.py  explain_sharp_metadata_v50.py  fft_power_compare.py  generate_calibration_preview.py  generate_coverage_heatmap.py  generate_diagnostic_summary.py  generate_dummy_data.py  generate_fft_alignment.py  generate_fft_autocorr.py  generate_fft_symbolic_fusion.py  generate_html_report.py  generate_lightcurve_preview.py  generate_phase_alignment.py  gll_error_localizer.py  plot_benchmarks.py  plot_fft_power_cluster_compare.py  plot_gll_heatmap_per_bin.py  plot_umap_fusion_latents_v50.py  plot_umap_v50.py  review_and_compile.sh  shap_attention_overlay.py  shap_overlay.py  shap_symbolic_overlay.py  simulate_lightcurve_from_mu.py  spectral_absorption_overlay_clustered.py  spectral_shap_gradient.py  spectral_smoothness_map.py  symbolic_influence_map.py  symbolic_rule_table.py  symbolic_violation_overlay.py  validate_assets_manifest.py  validate_submission.py
(+387 files in other folders)
